k8s/k8s-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-app
  name: backend-app
  labels:
    app.kubernetes.io/name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-app  
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend-app
    spec:
      containers:
      - name: backend-app
        image: ${ECR_HOST}/mynavi-sample-ecs-backend:latest        
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 0.25
            memory: 512Mi
          limits:
            cpu: 0.5
            memory: 1024Mi
