k8s/k8s-bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-app
  name: bff-app
  labels:
    app.kubernetes.io/name: bff-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: bff-app   
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bff-app
    spec:
      containers:
      - name: bff-app
        image: ${ECR_HOST}/mynavi-sample-ecs-bff:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 0.25
            memory: 512Mi
          limits:
            cpu: 0.5
            memory: 1024Mi
