k8s/k8s-bff-clb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo-app
  name: bff-app-lb
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: bff-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
