k8s/k8s-bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo-app
  name: bff-app-service
spec:
  selector:
    app.kubernetes.io/name: bff-app
  type:  NodePort
  ports:
  - protocol: TCP
    port:  80
    targetPort:  8080
