k8s/k8s-bff-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: demo-app
  name: bff-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /backend-for-frontend/index.html
    #alb.ingress.kubernetes.io/healthcheck-path: /backend-for-frontend/actuator/health
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bff-app-service
            port: 
              number: 80
